addon/styles/layout/next.css
/* ... */
.next-content-panel-wrapper
    .next-content-panel-container
    .next-content-panel
    > .next-content-panel-header.bordered
    .next-content-panel-header-left
    > .next-content-panel-title-container
    .panel-title {
    @apply font-normal;
}

body[data-theme='light'] .details-wrapper .next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header {
    @apply bg-white;
}

.next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header .next-content-panel-header-left > .next-content-panel-title-container {
    @apply flex flex-row items-center;
}

.next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header .next-content-panel-header-right {
    @apply flex flex-1 items-center justify-end space-x-1 py-2;
}

.next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header .next-content-panel-header-right button.btn,
.next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header .next-content-panel-header-right > .btn-wrapper > .btn {
    @apply text-xs;
    max-height: 1.75rem;
}

body[data-theme='light']
    .next-content-panel-wrapper
    .next-content-panel-container
    .next-content-panel
    > .next-content-panel-header
    .next-content-panel-header-right
    .status-badge.info-status-badge
    > span {
    @apply bg-blue-500 border border-blue-600;
}

/* .next-content-panel-wrapper .next-content-panel-container .next-content-panel.next-content-panel-is-closed > .next-content-panel-header,
.next-content-panel-wrapper .next-content-panel-container .next-content-panel.cp-is-closed > .next-content-panel-header {
    @apply rounded-md;
} */

.next-content-panel-wrapper .next-content-panel-container .next-content-panel.next-content-panel-is-closed > .next-content-panel-body,
.next-content-panel-wrapper .next-content-panel-container .next-content-panel.cp-is-closed > .next-content-panel-body {
    @apply border-0;
}

/* .next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-body {
    @apply rounded-b-md border border-gray-200 border-t-0;
} */

/* body[data-theme='dark'] .next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-header {
    @apply border-gray-700 bg-gray-900;
} */

/* body[data-theme='dark'] .next-content-panel-wrapper .next-content-panel-container .next-content-panel > .next-content-panel-body {
    @apply border-gray-700;
} */

.next-view-header {
    display: flex;
    box-align: center;
    align-items: center;
    justify-content: space-between;
    padding: 0px 24px 0px 36px;
    height: 57px;
    flex-shrink: 0;
    min-width: 100vw;
    max-width: 100%;
    -moz-user-select: none;
    user-select: none;
    -webkit-user-select: none;
    -webkit-app-region: drag;
}

.next-view-header .next-view-header-left {
    flex: 1;
    display: flex;
    box-align: center;
    align-items: center;
    -moz-user-select: none;
    user-select: none;
    -webkit-user-select: none;
    -webkit-app-region: drag;
}

.next-view-header .next-view-header-right {
    flex: 1;
    display: flex;
    box-align: center;
    align-items: center;
    justify-content: flex-end;
    user-select: none;
    -webkit-app-region: drag;
}

.next-view-header .next-view-header-right .next-user-button button.next-dd-item svg,
.next-view-header .next-view-header-right .next-user-button a.next-dd-item svg {
    color: #1e293b;
}

body[data-theme='dark'] .next-view-header .next-view-header-right .next-user-button button.next-dd-item svg,
body[data-theme='dark'] .next-view-header .next-view-header-right .next-user-button a.next-dd-item svg {
    color: #cbd5e1;
}

.next-view-header #view-header-left-content-a,
.next-view-header #view-header-left-content-b,
.next-view-header #view-header-actions {
    display: flex;
}

.next-view-header .left {
    flex-shrink: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.next-view-header .title {
    font-style: normal;
    line-height: normal;
    text-align: left;
    font-weight: 500;
    font-size: 15px;
}

.next-view-header .title.breadcrumb::before {
    @apply text-gray-400;
    content: '▸';
    margin: 0 0.65rem;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.next-view-section-footer,
.next-view-section-subheader {
    @apply border-gray-200 dark:border-gray-700;
    border-bottom-width: 1px;
    display: flex;
    min-width: 100%;
    max-width: 100%;
    width: 100%;
    box-align: center;
    padding: 0px 24px 0px 36px;
    height: 57px;
    /* height: 44px; */
}

.next-view-section-subheader-fixed-height {
    height: 57px !important;
}

/** fix heights of subheader actions */
.next-view-section-subheader > .next-view-section-subheader-actions input.form-input,
.next-view-section-subheader > .next-view-section-subheader-actions span.btn-wrapper > button.btn {
    height: 28px;
}

.next-view-section-subheader.is-mobile {
    display: flex;
    flex-direction: column;
}

.next-view-section-subheader {
    display: grid;
    grid-template-columns: 1fr 3fr;
}

.next-view-section-footer.next-view-section-footer-grid {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
}

.next-view-section-footer {
    @apply border-b-0 border-t sticky bottom-0 inset-x-0 dark:bg-gray-900;
}

.next-view-section-subheader .next-view-section-subheader-title {
    @apply text-base;
}

.next-view-section-subheader .next-view-section-subheader-left {
    flex: 1;
    display: flex;
    box-align: center;
    align-items: center;
}

.next-view-section-subheader .next-view-section-subheader-left .next-view-section-subheader-left-inner-wrapper {
    min-width: 100px;
}
/* ... */

